# fast-fit

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
cli/: app.py  menu.py
configs/: base.yaml  example.yaml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 059c794fe285_identity.py  5e67a13b4d80_order_item_dish_fk.py  6e240257e7cb_order_item_fk.py  86919bd82f86_order_remove_currency.py  ad0b555bdd4a_dish_image.py  bd839c4093b3_order_remove_total_price.py  ea5c893ce7b5_order.py  f997d9ba6e82_menu.py  fbe9c0da17a5_order_created_at_timezone_aware.py
src/bootstrap/: config.py
src/common/infrastructure/app/: app.py  http_app.py
src/common/infrastructure/config/: loader.py
src/common/infrastructure/database/sqlalchemy/: database.py  executor.py
src/common/infrastructure/di/container/: container.py
src/common/infrastructure/logger/logging/: formatter.py  logger_factory.py
src/common/infrastructure/server/fastapi/: server.py
src/fastfit/auth/application/repositories/: descriptor_repository.py
src/fastfit/auth/infrastructure/app/: app.py
src/fastfit/identity/application/services/: identity_service.py
src/fastfit/identity/domain/entity/: identity.py
src/fastfit/menu/: __init__.py
src/fastfit/menu/application/: __init__.py
src/fastfit/menu/domain/: __init__.py
src/fastfit/menu/infrastructure/: __init__.py
src/fastfit/order/: __init__.py
static/: index.html
templates/: base.html  cart.html  landing.html  login.html  menu.html  order_details.html  profile.html
(+126 files in other folders)
